term/src/snapshots/polyglot__golden__flashcards_nothing_due.snap
---
source: term/src/golden.rs
expression: "snapshot(|frame, inner, theme| f.render(frame, inner, theme, msgs()))"
---



        ╭──────────────────────────────────────────────────────────────╮
        │                                                              │
        │   No hay tarjetas para repasar ahora. Vuelve más tarde.      │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
