term/src/snapshots/polyglot__golden__flashcards_revealed_vocab_with_freq.snap
---
source: term/src/golden.rs
expression: "snapshot(|frame, inner, theme| f.render(frame, inner, theme, msgs()))"
---



        ╭──────────────────────────────────────────────────────────────╮
        │                                                              │
        │   Flashcards  1/1                                            │
        │                                                              │
        │   Gracias                                                    │
        │                                                              │
        │   あ り が と う                                                  │
        │   arigatou                                                   │
        │   Entrada kana: arigatou.                                    │
        │   Frecuencia: nº 14                                          │
        │                                                              │
        │   ¿Qué tal lo recordaste?                                    │
        │   [1] Otra vez (hoy)                                         │
        │   [2] Difícil (1d)                                           │
        │   [3] Bien (1d)                                              │
        │   [4] Fácil (4d)                                             │
        │   ESC volver al menú                                         │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
