term/src/snapshots/polyglot__golden__flashcards_summary.snap
---
source: term/src/golden.rs
expression: "snapshot(|frame, inner, theme| f.render(frame, inner, theme, msgs()))"
---



        ╭──────────────────────────────────────────────────────────────╮
        │                                                              │
        │   ¡Sesión completada!                                        │
        │                                                              │
        │   Tarjetas repasadas: 1                                      │
        │                                                              │
        │   ESC volver al menú                                         │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
