term/src/snapshots/polyglot__golden__kana_chart_first_page.snap
---
source: term/src/golden.rs
expression: "snapshot(|f, inner, theme| c.render(f, inner, theme, msgs()))"
---



        ╭──────────────────────────────────────────────────────────────╮
        │                                                              │
        │   Hiragana · Básico   ‹ 1/6 ›                                │
        │                                                              │
        │      a         i         u         e         o               │
        │      あ  a      い  i      う  u      え  e      お  o            │
        │                                                              │
        │      か  ka     き  ki     く  ku     け  ke     こ  ko           │
        │                                                              │
        │      さ  sa     し  shi    す  su     せ  se     そ  so           │
        │                                                              │
        │      た  ta     ち  chi    つ  tsu    て  te     と  to           │
        │                                                              │
        │      な  na     に  ni     ぬ  nu     ね  ne     の  no           │
        │                                                              │
        │      は  ha     ひ  hi     ふ  fu     へ  he     ほ  ho           │
        │                                                              │
        │      ま  ma     み  mi     む  mu     め  me     も  mo           │
        │                                                              │
        │      や  ya               ゆ  yu               よ  yo           │
        │   ← → cambiar página · ESC volver                            │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
