term/src/snapshots/polyglot__golden__menu_submenu.snap
---
source: term/src/golden.rs
expression: "snapshot(|f, inner, theme| m.render(f, inner, theme, msgs()))"
---



        ╭──────────────────────────────────────────────────────────────╮
        │                                                              │
        │   ██████ ██████ ██     ██  ██ ██████ ██     ██████ ██████    │
        │   ██  ██ ██  ██ ██      ████  ██     ██     ██  ██   ██      │
        │   ██████ ██  ██ ██       ██   ██ ███ ██     ██  ██   ██      │
        │   ██     ██████ ██████   ██   ██████ ██████ ██████   ██      │
        │                                                              │
        │   ⠀⠀⠀⣠⡔⠆⠩⠙⠛⠙⠴⣦⣄⠀⠀⠀       v0.1.0 · es → ja                    │
        │   ⠀⣠⣾⣿⣿⣶⣶⣄⣀⣀⡰⠿⠉⠑⢄⠀                                           │
        │   ⠰⣷⣿⣿⣿⣿⣿⣿⡛⠩⠀⠀⠀⠀⠈⠆       ★ XP: 42                            │
        │   ⡏⣿⣿⣿⣿⣿⢿⠛⡄⠀⠀⠀⠀⠀⠀⢸       ▲ Racha: 3 días                     │
        │   ⡇⠏⠹⣿⠿⢿⠈⠈⠁⠀⠀⠀⠀⠀⠀⢸       5/100 tarjetas aprendidas           │
        │   ⠰⡀⠀⡜⠀⠐⡄⠀⠀⠀⠀⠀⠀⠀⢀⠆                                           │
        │   ⠀⠑⢄⠀⠹⠑⠀⠠⠤⠀⠀⢀⠀⡠⠊⠀       ▸ あ   Entrenador de Kana            │
        │   ⠀⠀⠀⠑⠢⠶⣿⣷⣾⣦⠠⠔⠊⠀⠀⠀         ⊘  Flashcards                     │
        │                            ⊘  Rikai (gramática)              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │   ↑/↓ moverse · ENTER elegir · ESC volver                    │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
