term/src/snapshots/polyglot__golden__menu_top_level.snap
---
source: term/src/golden.rs
expression: "snapshot(|f, inner, theme| m.render(f, inner, theme, msgs()))"
---



        ╭──────────────────────────────────────────────────────────────╮
        │                                                              │
        │   ██████ ██████ ██     ██  ██ ██████ ██     ██████ ██████    │
        │   ██  ██ ██  ██ ██      ████  ██     ██     ██  ██   ██      │
        │   ██████ ██  ██ ██       ██   ██ ███ ██     ██  ██   ██      │
        │   ██     ██████ ██████   ██   ██████ ██████ ██████   ██      │
        │                                                              │
        │     ⇄ Yui · Cambiar de perfil                                │
        │                                                              │
        │   ▸ ◆  Aprender ›                         ⠀⠀⠀⣠⡔⠆⠩⠙⠛⠙⠴⣦⣄⠀⠀⠀   │
        │     ◫  Leer ›                             ⠀⣠⣾⣿⣿⣶⣶⣄⣀⣀⡰⠿⠉⠑⢄⠀   │
        │     ◉  Evaluar ›                          ⠰⣷⣿⣿⣿⣿⣿⣿⡛⠩⠀⠀⠀⠀⠈⠆   │
        │     ▩  Herramientas ›                     ⡏⣿⣿⣿⣿⣿⢿⠛⡄⠀⠀⠀⠀⠀⠀⢸   │
        │     ⚙  Ajustes                            ⡇⠏⠹⣿⠿⢿⠈⠈⠁⠀⠀⠀⠀⠀⠀⢸   │
        │     ⏻  Salir                              ⠰⡀⠀⡜⠀⠐⡄⠀⠀⠀⠀⠀⠀⠀⢀⠆   │
        │                                           ⠀⠑⢄⠀⠹⠑⠀⠠⠤⠀⠀⢀⠀⡠⠊⠀   │
        │   v0.1.0 · es → ja                        ⠀⠀⠀⠑⠢⠶⣿⣷⣾⣦⠠⠔⠊⠀⠀⠀   │
        │   ★ XP: 42                                                   │
        │   ▲ Racha: 3 días                                            │
        │                                                              │
        │   ↑/↓ moverse · ENTER entrar/cambiar perfil · Q salir        │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
