term/src/snapshots/polyglot__golden__onboarding_done.snap
---
source: term/src/golden.rs
expression: "snapshot(|f, inner, theme| o.render(f, inner, theme, msgs()))"
---



        ╭──────────────────────────────────────────────────────────────╮
        │                                                              │
        │   ¡Todo listo!                                               │
        │                                                              │
        │   Te recomiendo empezar por el Entrenador de Kana.           │
        │                                                              │
        │   ENTER  ir al menú principal                                │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        ╰──────────────────────────────────────────────────────────────╯
